--- a/ch03/ch03.ipynb
+++ b/ch03/ch03.ipynb
@@ -1775,7 +1775,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1789,7 +1789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Jan 11 2023, 09:18:20) [Clang 14.0.6 ]"
+   "version": "3.8.18"
   },
   "toc": {
    "nav_menu": {},
