--- a/ch03/ch03.ipynb
+++ b/ch03/ch03.ipynb
@@ -50,12 +50,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[OK] Your Python version is 3.9.6 | packaged by conda-forge | (default, Jul 11 2021, 03:35:11) \n",
-      "[Clang 11.1.0 ]\n",
-      "[OK] numpy 1.21.2\n",
-      "[OK] matplotlib 3.4.3\n",
-      "[OK] sklearn 1.0\n",
-      "[OK] pandas 1.3.2\n"
+      "[OK] Your Python version is 3.12.9 | packaged by Anaconda, Inc. | (main, Feb  6 2025, 18:49:16) [MSC v.1929 64 bit (AMD64)]\n",
+      "[OK] numpy 2.2.4\n",
+      "[OK] matplotlib 3.10.0\n",
+      "[OK] sklearn 1.6.1\n",
+      "[OK] pandas 2.2.3\n"
      ]
     }
    ],
@@ -1789,7 +1788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.12.9"
   },
   "toc": {
    "nav_menu": {},
